# reasonably-reactive-rust

./: .gitignore  Cargo.toml  README.md  bsconfig.json  package.json
src/: main.rs
web/: App.re  Data.re  Routing.re  index.html
web/components/: AboutPage.re  IndexPage.re  ItemList.re  Link.re  NotFoundPage.re
web/containers/: AppLayout.re
